--- a/porfolio_Pierini_back/src/main/resources/application.properties
+++ b/porfolio_Pierini_back/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portafolio?useSSL=false&createDatabaseIfNotExist=true&Timezone=UTC&useLegacyDateTimeCode=false
-spring.DataSource.username=root
-spring.DataSource.password=
+#space develop
+#spring.datasource.url=jdbc:mysql://localhost:3306/portafolio?useSSL=false&createDatabaseIfNotExist=true&Timezone=UTC&useLegacyDateTimeCode=false
+#spring.DataSource.username=root
+#spring.DataSource.password=
 
+#space production
+spring.datasource.url=jdbc:mysql://uopdstqwmmr0xlwj:tserHG4WiNx083qegm3E@bmuprnfjbkkdv9sx0but-mysql.services.clever-cloud.com:3306/bmuprnfjbkkdv9sx0but
+spring.DataSource.username=uopdstqwmmr0xlwj
+spring.DataSource.password=tserHG4WiNx083qegm3E
 
+#spring hibernate
 spring.jpa.hibernate.dll-auto=update
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-
+#token security
 jwt.secret=secret
 jwt.expiration=36000
