--- a/porfolio_Pierini/package.json
+++ b/porfolio_Pierini/package.json
@@ -29,6 +29,8 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
+    "firebase": "^9.13.0",
+    "init": "^0.1.2",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
