--- a/porfolio_Pierini_back/pom.xml
+++ b/porfolio_Pierini_back/pom.xml
@@ -15,6 +15,8 @@
     <description>This project is created for Argentina Programa (AP)</description>
     <properties>
         <java.version>18</java.version>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
     </properties>
     <dependencies>
         
